# trading_simulator

./: Portfolio.py  README.md  Simulation.py  Strategy.py  Ticker.py  main.py  pyproject.toml
